--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="into_text">SideHelp</string>
+    <string name="shelter_button_text">Manage Donations (For Shelter Only)</string>
 
 </resources>
