--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="action_settings">Settings</string>
     <string name="into_text">SideHelp</string>
     <string name="shelter_button_text">Manage Donations (For Shelter Only)</string>
+    <string name="donate_button_text">Donate</string>
+    <string name="title_activity_donate">DonateActivity</string>
 
 </resources>
