--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,10 @@
     <string name="shelter_button_text">Manage Donations (For Shelter Only)</string>
     <string name="donate_button_text">Donate</string>
     <string name="title_activity_donate">DonateActivity</string>
-
+    <string name="title_activity_add_community_users">AddCommunityUsers</string>
+	<string-array name="gender_array">
+	    <item>Male</item>
+	    <item>Female</item>
+	</string-array>
+	<string name="gender_prompt"> </string>
 </resources>
